# open-sfs

./: .gitignore  README.md  convert_to_parquet.py  pyproject.toml  rkrattsbaser.py  run.py  test.py  utils.py  writer.py
services/: rkrattsdb.py
src/sfs/: __init__.py  main.py
src/sfs/services/: jpinfonet.py  rkrattsbaser.py  rkrattsdb.py
