[project]
name = "python-sfs"
version = "0.1.0"
description = "Download Swedish laws from the official register"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.1",
    "pyarrow>=20.0.0",
    "requests>=2.32.4",
]

[project.scripts]
sfs = "main:main"

[tool.setuptools.package-dir]
"" = "src"
